--- a/resume.pug
+++ b/resume.pug
@@ -5,58 +5,51 @@ include resume-mixins.pug
   h2.header-subtitle Développeur Frontend
 #main
 
+  #intro.section
+    h1.section-title Qui je suis
+    div.section-content
+      :markdown-it
+        Je me spécialise dans la mise en place d’expériences web qui combinent **interactivité**, ergonomie et qualité du code.
+
+        Ma passion pour le web et le développement me permet de découvrir et experimenter de nouvelles technologies et outils de développement, mais également de suivre les tendances en matière de **design** ou d’ergonomie.
+
   .section
     h2.section-title Expériences
 
-    +item("Développeur Frontend", "Munso", "Toulouse", "Sept. 2016", "Auj.")
+    +timeline-item("Développeur Frontend", "Munso", "Toulouse", "Sept. 2016", "Auj.")
       :markdown-it
         - Développement d’applications **Ionic/Angular** (Android et iOS)
         - Développement de sites web Angular : [Share Stories Of Change](http://sharestoriesofchange.org/)
         - Sites web **WordPress** : [Beezness](https://beezness.net/) - [CDA France](https://cdafrance.com/)
         - Intégration front sur du Symfony (**Twig**) : [Lig'Up](https://lig-up.net/)
-        - Mise en place d’API REST Node/Express/MongoDB
-        - Mise en place d'environnement de developpement (**WebPack**)
+        - Amélioration de l'environnement de développement avec **WebPack**, NPM, Yarn, StyleLint, ESLint...
+        - Mise en place d’API REST Node / Express / MongoDB
 
-    +item("Développeur Frontend", "Demooz", "Toulouse", "Mai", "Août 2016", "Stage M1 Informatique")
+    +timeline-item("Développeur Frontend", "Demooz", "Toulouse", "Mai", "Août 2016", "Stage M1 Informatique")
       :markdown-it
         - Développement de la version 2 du site [demooz.com](https://demooz.com/fr/)
         - Frontend et backend AngularJS + API NodeJS
 
-    +item("Développeur Frontend", "Expertises & Concept", "Toulouse", "Juin", "Août 2014", "Stage DUT Informatique")
+    +timeline-item("Développeur Fullstack", "Expertises & Concept", "Toulouse", "Juin", "Août 2014", "Stage DUT Informatique")
       :markdown-it
         - Réalisation d’un site intranet pour la gestion des dossiers et la réalisation des expertises
+        - Utilisation du framework Phalcon PHP
 
   .section
     h2.section-title Formations
 
-    +item("Master Développement Logiciel", "Université Paul Sabatier", "Toulouse", "2017", null, "En alternance chez Munso")
+    +timeline-item("Master Développement Logiciel", "Université Paul Sabatier", "Toulouse", "2017", null, "En alternance chez Munso")
 
-    +item("Licence Informatique", "Université Paul Sabatier", "Toulouse",  "2015")
+    +timeline-item("Licence Informatique", "Université Paul Sabatier", "Toulouse",  "2015")
 
-    +item("DUT Informatique", "IUT A", "Toulouse",  "2014")
+    +timeline-item("DUT Informatique", "IUT A", "Toulouse",  "2014")
 
-  .section.interests
-    h2.section-title Centres d'intérêt
-    .content
-      +interest("music", "Musique")
-      +interest("code", "Code")
-      +interest("molkky", "Mölkky")
-      +interest("movie", "Séries")
 
 #sidebar
-  #intro.side-block
-    h1.section-title Qui je suis
-    div.content
-      :markdown-it
-        Lorem ipsum dolor sit amet consectetur **adipisicing** elit. Similique asperiores et neque commodi ullam **tempore** ratione omnis reiciendis saepe? Ipsa repellat autem ipsam recusandae vero optio deserunt officia fugiat debitis.
 
-        Lorem ipsum dolor sit amet **consectetur adipisicing** elit.
-
-  .separator
-
-  #contact.side-block
+  #contact.section
     h1.section-title Contact
-    div.contact-items
+    .contact-items
       i.icon.icon-at
       span.value valche.vc@gmail.com
       i.icon.icon-map-marker
@@ -70,25 +63,36 @@ include resume-mixins.pug
 
   .separator
 
-  #skills.side-block
+  #skills.section
     h1.section-title Compétences
-    div.content
+    .section-content
+      h2.medium-title Langages et frameworks
       :markdown-it
-        ## Langages et frameworks
         - JavaScript (ES6) - HTML 5 - CSS 3
         - Angular - Vue.js - React
         - Ionic - Cordova
         - NodeJS - Express
-        ## Outils de développement
+      h2.medium-title Outils de développement
+      :markdown-it
         - Webpack
         - SASS - LESS
         - TweenMax (GSAP)
         - Versioning : GIT
-        ## Autres
+      h2.medium-title Autres
+      :markdown-it
         - Photoshop - Illustrator - InDesign
         - Anglais (bon niveau)
           - Lecture/écriture aisée
           - Bonne compréhension orale
+  .separator
+
+  #interests.section
+    h2.section-title Centres d'intérêt
+    .interests-items
+      +interest("headphones", "Musique")
+      +interest("code", "Code")
+      +interest("molkky", "Mölkky")
+      +interest("movie", "Séries")
 
 style
   include:scss resume.scss
