--- a/resume.pug
+++ b/resume.pug
@@ -11,7 +11,7 @@ include resume-mixins.pug
       :markdown-it
         Je me spécialise dans la mise en place d’expériences web qui combinent **interactivité**, ergonomie et qualité du code.
 
-        Ma passion pour le web et le développement me permet de découvrir et experimenter de nouvelles technologies et outils de développement, mais également de suivre les tendances en matière de **design** ou d’ergonomie.
+        Ma passion pour le web et le **développement** me permet de découvrir et experimenter de nouvelles technologies et outils, mais également de suivre les tendances en matière de **design** ou d’ergonomie.
 
   .section
     h2.section-title Expériences
