--- a/Gradient/customisation.scss
+++ b/Gradient/customisation.scss
@@ -9,4 +9,4 @@ h1, h2, h3{
     font-family: "Montserrat", sans-serif;
 }
 
-$gradient-background: linear-gradient(145deg, #43CBFF 0%, #9708CC 70%);
+$gradient-background: linear-gradient(to bottom right,#ff4136,#1800ff);
