--- a/resume.pug
+++ b/resume.pug
@@ -1,8 +1,8 @@
 include resume-mixins.pug
 
 #header
-  h1.header-title Valentin Chevalier
-  h2.header-subtitle Développeur Frontend
+  h1.header-title #[strong Camille] DARRACQ
+  h2.header-subtitle Employée Polyvalente
 #main
 
   #intro.section
@@ -10,90 +10,103 @@ include resume-mixins.pug
       :markdown-it
         Je me spécialise dans la mise en place d’expériences web qui combinent **interactivité**, ergonomie et qualité du code.
 
-        Ma passion pour le web et le **développement** me permet de découvrir et experimenter de nouvelles technologies et outils, mais également de suivre les tendances en matière de **design** et d’ergonomie.
-
   .section
     h2.section-title Expériences
 
-    +timeline-item("Développeur Frontend", "Munso", "Toulouse", "Sept. 2016", "Auj.", "Agence digitale basée à Toulouse et Paris d'une dizaine de personnes")
-      :markdown-it
-        - Conception technique et développement d’applications Android et iOS : **Ionic** / Meteor + API REST Node / Express / MongoDB
-        - Développement de sites web Angular : [Share Stories Of Change](http://sharestoriesofchange.org/)
-        - Sites web **WordPress** : [Forbidden Stories](https://forbiddenstories.org/) - [CDA France](https://cdafrance.com/) - ...
-        - Intégration front sur du Symfony (**Twig**) : [Lig'Up](https://lig-up.net/)
-        - Amélioration de l'environnement de développement avec **WebPack**, NPM, Yarn, StyleLint, ESLint...
+    //- +timeline-item("Développeur Frontend", "Munso", "Toulouse", "Sept. 2016", "Auj.", "Agence digitale basée à Toulouse et Paris d'une dizaine de personnes")
+    //-   :markdown-it
+    //-     - Conception technique et développement d’applications Android et iOS : **Ionic** / Meteor + API REST Node / Express / MongoDB
+    //-     - Développement de sites web Angular : [Share Stories Of Change](http://sharestoriesofchange.org/)
+    //-     - Sites web **WordPress** : [Forbidden Stories](https://forbiddenstories.org/) - [CDA France](https://cdafrance.com/) - ...
+    //-     - Intégration front sur du Symfony (**Twig**) : [Lig'Up](https://lig-up.net/)
+    //-     - Amélioration de l'environnement de développement avec **WebPack**, NPM, Yarn, StyleLint, ESLint...
 
-    +timeline-item("Développeur Frontend", "Demooz", "Toulouse", "Mai", "Août 2016", "Stage M1 Informatique")
-      :markdown-it
-        - Développement de la version 2 du site [demooz.com](https://demooz.com/fr/)
-        - Frontend et backend AngularJS + API NodeJS
+    //- +timeline-item("Développeur Frontend", "Demooz", "Toulouse", "Mai", "Août 2016", "Stage M1 Informatique")
+    //-   :markdown-it
+    //-     - Développement de la version 2 du site [demooz.com](https://demooz.com/fr/)
+    //-     - Frontend et backend AngularJS + API NodeJS
 
-    +timeline-item("Développeur Fullstack", "Expertises & Concept", "Toulouse", "Juin", "Août 2014", "Stage DUT Informatique")
+    +timeline-item("Graphiste Illustratrice Freelance", "Auto-entrepreneur", "Toulouse", "Depuis 2016")
       :markdown-it
-        - Réalisation d’un site intranet pour la gestion des dossiers et la réalisation des expertises
-        - Utilisation du framework Phalcon PHP
+        - Relation et gestion clientèle
+        - Gestion administrative de l'entreprise
+
+    +timeline-item("Service, employée polyvalente", "La Kantoch", "Toulouse", "2018 - 8 mois")
+      :markdown-it
+        - Mise en place - Service en salle
+        - Encaissement
+        - Commis - Plonge
+
+    +timeline-item("Hôtesse de caisse", "Casino Supermarché - Espace Saint-George", "Toulouse", "2011 - 3 mois", "2014 - 5 mois")
+
+    +timeline-item("Employée polyvalente", "Carrefour Market", "Argelès-Gazost", "2011 - 3 mois", "2012 - 3 mois")
+
+    +timeline-item("Service, employée polyvalente", "Café Napoléon III", "Bordeaux", "2010 - 3 mois")
+
+    +timeline-item("Réception hôtelière", "La Louisiane", "Paris 6", "2009", "3 mois")
+
+    +timeline-item("Vendeuse", "Camaïeu", "Bordeaux", "2009 - 6 mois")
 
   .section
     h2.section-title Formations
 
-    +timeline-item("Master Développement Logiciel", "Université Paul Sabatier", "Toulouse", "2017", null, "En alternance chez Munso")
+    +timeline-item("Diplôme d'infographie multimédia", "AP Formation", "Toulouse", "2015")
 
-    +timeline-item("Licence Informatique", "Université Paul Sabatier", "Toulouse",  "2015")
+    +timeline-item("Diplôme national d'art - Option Design", "ISDAT", "Toulouse", "2011 - 2013")
 
-    +timeline-item("DUT Informatique", "IUT A", "Toulouse",  "2014")
+    +timeline-item("Mise à niveau en Art Appliqué", "Ecole de condé", "Bordeaux", "2009 - 2010")
+
+    +timeline-item("Bac L - Histoire de l'art", "", "Bordeaux", "2008")
 
 
 #sidebar
-
   #contact.section
     h1.section-title Contact
     .contact-items
-      i.icon.icon-at
-      span.value valche.vc@gmail.com
-      i.icon.icon-map-marker
-      span.value 21 bd Matabiau #[span.small (appt 67)],
+      i.icon.icon-mailbox
+      span.value camille.darracq@gmail.com
+      i.icon.icon-home
+      span.value 6 rue des Gallois,
         br
-        | 31 000 Toulouse
+        | Bât 1 Appt 111,
+        br
+        | 31 400 Toulouse
       i.icon.icon-phone
-      span.value 07.77.03.37.86
-      i.icon.icon-github
-      span.value #[a(href="https://github.com/valentinchevalier", target="_blank") @valentinchevalier]
+      span.value 06 84 97 25 17
+      i.icon.icon-eye
+      span.value #[a(href="https://camilledarracq.com", target="_blank") camilledarracq.com]
 
   .separator
 
   #skills.section
     h1.section-title Compétences
     .section-content
-      h2.medium-title Langages et frameworks
+      h2.medium-title Relationnel
       :markdown-it
-        - JavaScript (ES6) - HTML 5 - CSS 3
-        - Angular - Vue.js - React
-        - Ionic - Cordova
-        - NodeJS - Express
-      h2.medium-title Outils de développement
+        - Accueil et conseil du client
+        - Reception de livraisons
+        - Travail en équipe
+      h2.medium-title Infographie
       :markdown-it
-        - Webpack
-        - SASS - LESS
-        - TweenMax (GSAP)
-        - Versioning : GIT
+        - Photoshop, Illustrator, InDesign
       h2.medium-title Autres
       :markdown-it
-        - Photoshop - Illustrator - InDesign
         - Anglais (bon niveau)
           - Lecture/écriture aisée
           - Bonne compréhension orale
+
   .separator
 
   #interests.section
-    h2.section-title Centres d'intérêt
+    h2.section-title Passion
     .interests-items
-      +interest("headphones", "Musique")
-      +interest("code", "Code")
+      +interest("headphones", "Art & design")
+      +interest("code", "Tropicool")
       +interest("molkky", "Mölkky")
       +interest("movie", "Séries")
 
-#disclaimer CV réalisé en HTML/CSS -&nbsp;
-  a(href="https://git.io/vhukb", target="_blank") Code source
+//- #disclaimer CV réalisé en HTML/CSS -&nbsp;
+//-   a(href="https://git.io/vhukb", target="_blank") Code source
 
 style
   include:scss resume.scss
